novidade de mensagem no loader e nova função de timestamp
Falta agora fazer as obrigatoriedades caso seja de menor e não deixar passar o cadastro segundo as condições pedidas pelo cliente

--- a/public/css/loader.css
+++ b/public/css/loader.css
@@ -11,6 +11,13 @@
     margin: auto;
     margin-top: 300px;
   }
+#loaderMsg{
+  position: absolute;
+    z-index: 3001;
+    margin: auto;
+    margin-top: 450px;
+    margin-left: 40%;
+}
   
   /* Safari */
   @-webkit-keyframes spin {
