Cadastro de responsáveis autorizados
Agora já é possível cadastrar responsáveis autorizados na aba da Secretaria.

--- a/public/css/secretaria.css
+++ b/public/css/secretaria.css
@@ -16,6 +16,7 @@
     background-clip: border-box;
     border: 0 solid rgba(0,0,0,.125);
     border-radius: .25rem;
+    box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
 }
 
 .card-body {
