--- a/public/css/secretaria.css
+++ b/public/css/secretaria.css
@@ -1,3 +1,6 @@
+a > svg {
+    pointer-events: none;
+}
 
 .main-body {
     padding: 15px;
@@ -47,3 +50,51 @@
 .shadow-none {
     box-shadow: none!important;
 }
+
+input[type=button] {
+    padding: 5px 10px;
+    margin: 10px 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    background: #ddd;
+    border: 1px solid #ccc;
+  }
+  input[type=button]:hover {
+    background: #ccc;
+  }
+  
+  .confirm {
+    display: none;
+    z-index: 999999999;
+  }
+  .confirm > div:first-of-type {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    top: 0px;
+    left: 0px;
+    z-index: 999999999;
+  }
+  .confirm > div:last-of-type {
+    padding: 10px 20px;
+    background: white;
+    position: absolute;
+    width: auto;
+    height: auto;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    border: 1px solid #333;
+    z-index: 999999999;
+  }
+  .confirm > div:last-of-type div:first-of-type {
+    min-width: 150px;
+    padding: 10px;
+    z-index: 999999999;
+  }
+  .confirm > div:last-of-type div:last-of-type {
+    text-align: right;
+    z-index: 999999999;
+  }
