Abertura e processamento de chamados
A abertura e o pós processamento em nuvem do chamado está pronto. Assim que um usuário abre um chamado, os servidores remotos processam a abertura e abrem pedidos para envio dos e-mails para o suporte com cópia (Cc) para o solicitante.

--- a/public/css/secretaria.css
+++ b/public/css/secretaria.css
@@ -79,7 +79,7 @@ input[type=button] {
   .confirm > div:last-of-type {
     padding: 10px 20px;
     background: white;
-    position: absolute;
+    position: fixed;
     width: auto;
     height: auto;
     left: 50%;
